--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,11 +16,13 @@
   "dependencies": {
     "commander": "^12.0.0",
     "fs-extra": "^11.2.0",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/node": "latest",
+    "@types/prompts": "^2.4.9",
     "typescript": "latest"
   },
   "main": "dist/index.js",
