feat: implement express-app with configuration and build setup

--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "description": "",
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "packageManager": "pnpm@8.0.0",
   "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev --parallel",
+    "turbo": "turbo",
+    "tsc": "tsc",
+    "ts-node": "ts-node",
+    "build:turbo": "turbo build",
+    "build": "ts-node --project tsconfig.json ./scripts/build.ts",
+    "start": "node ./dist/main.js",
+    "dev": "pnpm build & ts-node --project tsconfig.json main.ts",
+    "dev:p": "turbo dev --parallel",
     "lint": "turbo lint",
     "test": "turbo test",
     "docker:kafka:up": "docker compose up -d",
@@ -18,6 +24,8 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "esbuild": "^0.25.5",
+    "ts-node": "latest",
     "turbo": "latest",
     "typescript": "latest"
   },
