feat: refactor API Gateway and remove Express app structure

--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "turbo": "turbo",
     "tsc": "tsc",
     "ts-node": "ts-node",
-    "build:turbo": "turbo build",
     "build": "ts-node --project tsconfig.json ./scripts/build.ts",
     "start": "node ./dist/main.js",
-    "dev": "pnpm build & ts-node --project tsconfig.json main.ts",
-    "dev:p": "turbo dev --parallel",
+    "dev": "nodemon",
+    "dev:turbo": "turbo dev --parallel",
+    "build:turbo": "turbo build",
     "lint": "turbo lint",
     "test": "turbo test",
-    "docker:kafka:up": "docker compose up -d",
-    "docker:kafka:down": "docker compose down",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
     "cli": "pnpm --filter cli build && node packages/cli/dist/index.js"
   },
   "devDependencies": {
     "@types/node": "latest",
     "esbuild": "^0.25.5",
+    "nodemon": "^3.1.10",
     "ts-node": "latest",
     "turbo": "latest",
     "typescript": "latest"
